syntax = "proto3";

package inventory;

import "../commons.proto";

message ExpMestOther {
  string id = 1;
  int64 hisExpMestId = 2;
  string expMestCode = 3;
  int64 expMestTypeId = 4;
  int64 expMestSttId = 5;
  int64 mediStockId = 6;
  string reqLoginname = 7;
  string reqUsername = 8;
  int64 reqRoomId = 9;
  int64 reqDepartmentId = 10;
  int64 createDate = 11;
  string reqUserTitle = 12;
  int64 serviceReqId = 13;
  double tdlTotalPrice = 14;
  string tdlServiceReqCode = 15;
  int64 tdlIntructionTime = 16;
  int64 tdlIntructionDate = 17;
  int64 tdlIntructionDateMin = 18;
  int64 tdlTreatmentId = 19;
  string tdlTreatmentCode = 20;
  int64 tdlPatientId = 21;
  string tdlPatientCode = 22;
  string tdlPatientName = 23;
  string tdlPatientFirstName = 24;
  string tdlPatientLastName = 25;
  int64 tdlPatientDob = 26;
  int32 tdlPatientIsHasNotDayDob = 27;
  string tdlPatientAddress = 28;
  int64 tdlPatientGenderId = 29;
  string tdlPatientGenderName = 30;
  int64 tdlPatientTypeId = 31;
  string tdlHeinCardNumber = 32;
  string tdlPatientPhone = 33;
  string tdlPatientProvinceCode = 34;
  string tdlPatientDistrictCode = 35;
  string tdlPatientCommuneCode = 36;
  string tdlPatientNationalName = 37;
  int64 virCreateMonth = 38;
  int64 virCreateYear = 39;
  string virHeinCardPrefix = 40;
  string icdCode = 41;
  string icdName = 42;
  string icdSubCode = 43;
  string icdText = 44;
  string expMestTypeCode = 45;
  string expMestTypeName = 46;
  string expMestSttCode = 47;
  string expMestSttName = 48;
  string mediStockCode = 49;
  string mediStockName = 50;
  string reqDepartmentCode = 51;
  string reqDepartmentName = 52;
  string reqRoomCode = 53;
  string reqRoomName = 54;
  string tdlAggrPatientCode = 55;
  string tdlAggrTreatmentCode = 56;
  string expMestSubCode = 57;
  string expMestSubCode2 = 58;
  int64 numOrder = 59;
  int32 priority = 60;
  string groupCode = 61;
  string patientTypeCode = 62;
  string patientTypeName = 63;
  int32 treatmentIsActive = 64;
  string lastExpLoginname = 65;
  string lastExpUsername = 66;
  int64 lastExpTime = 67;
  int64 finishTime = 68;
  int64 finishDate = 69;
  int32 isExportEqualApprove = 70;
  string lastApprovalLoginname = 71;
  string lastApprovalUsername = 72;
  int64 lastApprovalTime = 73;
  int64 lastApprovalDate = 74;
  string workingStateId = 75;
  int64 hisCreateTime = 76;
  int64 hisModifyTime = 77;
  string hisCreator = 78;
  string hisModifier = 79;
  string createdAt = 80;
  string updatedAt = 81;
  string createdBy = 82;
}

message ExpMestOtherList {
  repeated ExpMestOther data = 1;
}

message SyncExpMestOtherInput {
  map<string, string> hisData = 1;
  string userId = 2;
  string workingStateId = 3;
}

message SyncAllExpMestOtherInput {
  map<string, string> parentData = 1;
  repeated string medicinesData = 2;
  string userId = 3;
  string workingStateId = 4;
}

message SyncAllExpMestOtherResponse {
  ExpMestOther parent = 1;
  repeated ExpMestOtherMedicine medicines = 2;
}

message FindExpMestOthersByHisIdsInput {
  repeated int64 hisExpMestIds = 1;
}

message ExpMestOtherMedicine {
  string id = 1;
  int64 hisId = 2;
  int64 expMestId = 3;
  string expMestLocalId = 4;
  int64 medicineId = 5;
  int64 tdlMediStockId = 6;
  int64 tdlMedicineTypeId = 7;
  int64 expMestMetyReqId = 8;
  int64 ckImpMestMedicineId = 9;
  int32 isExport = 10;
  double amount = 11;
  double exportAmount = 12;
  string exportByUser = 13;
  int64 exportTime = 14;
  double actualExportAmount = 15;
  string actualExportByUser = 16;
  int64 actualExportTime = 17;
  string approvalLoginname = 18;
  string approvalUsername = 19;
  int64 approvalTime = 20;
  int64 approvalDate = 21;
  string expLoginname = 22;
  string expUsername = 23;
  int64 expTime = 24;
  int64 expDate = 25;
  string expMestCode = 26;
  int64 mediStockId = 27;
  int64 expMestSttId = 28;
  double impPrice = 29;
  double impVatRatio = 30;
  double price = 31;
  double vatRatio = 32;
  double virPrice = 33;
  double taxRatio = 34;
  int64 bidId = 35;
  string packageNumber = 36;
  int64 expiredDate = 37;
  string tdlBidGroupCode = 38;
  string tdlBidPackageCode = 39;
  string bidNumber = 40;
  string bidName = 41;
  int64 medicineTypeId = 42;
  string medicineTypeCode = 43;
  string medicineTypeName = 44;
  int64 impTime = 45;
  int64 supplierId = 46;
  string supplierCode = 47;
  string supplierName = 48;
  string medicineBytNumOrder = 49;
  string medicineRegisterNumber = 50;
  string activeIngrBhytCode = 51;
  string activeIngrBhytName = 52;
  string concentra = 53;
  int32 materialNumOrder = 54;
  int64 serviceId = 55;
  string nationalName = 56;
  int64 manufacturerId = 57;
  string manufacturerCode = 58;
  string manufacturerName = 59;
  string bytNumOrder = 60;
  string registerNumber = 61;
  int64 medicineGroupId = 62;
  string medicineGroupCode = 63;
  string medicineGroupName = 64;
  int32 medicineGroupNumOrder = 65;
  int64 serviceUnitId = 66;
  string serviceUnitCode = 67;
  string serviceUnitName = 68;
  int32 medicineNumOrder = 69;
  int64 medicineUseFormId = 70;
  string medicineUseFormCode = 71;
  string medicineUseFormName = 72;
  int32 medicineUseFormNumOrder = 73;
  double sumInStock = 74;
  double sumByMedicineInStock = 75;
  string mediStockCode = 76;
  string mediStockName = 77;
  int32 numOrder = 78;
  double presAmount = 79;
  int64 patientTypeId = 80;
  string patientTypeCode = 81;
  string patientTypeName = 82;
  int64 tdlPatientId = 83;
  int64 tdlTreatmentId = 84;
  int64 tdlServiceReqId = 85;
  int64 useTimeTo = 86;
  string tutorial = 87;
  int64 tdlIntructionTime = 88;
  int64 tdlIntructionDate = 89;
  string htuText = 90;
  string morning = 91;
  string evening = 92;
  int64 expMestTypeId = 93;
  int64 tdlAggrExpMestId = 94;
  int64 aggrExpMestId = 95;
  int64 reqRoomId = 96;
  int64 reqDepartmentId = 97;
  string reqUserTitle = 98;
  string reqLoginname = 99;
  string reqUsername = 100;
  int64 medicineLineId = 101;
  string createdAt = 102;
  string updatedAt = 103;
  string createdBy = 104;
}

message ExpMestOtherMedicineList {
  repeated ExpMestOtherMedicine data = 1;
}

message FindExpMestOtherMedicinesByExpMestIdInput {
  int64 expMestId = 1;
}

message FindExpMestOtherMedicineByHisIdInput {
  int64 hisId = 1;
}

message FindExpMestOtherMedicinesByHisIdsInput {
  repeated int64 hisIds = 1;
}

message CreateExpMestOtherInput {
  int64 hisExpMestId = 1;
  string expMestCode = 2;
  int64 expMestTypeId = 3;
  int64 expMestSttId = 4;
  int64 mediStockId = 5;
  string reqLoginname = 6;
  string reqUsername = 7;
  int64 reqRoomId = 8;
  int64 reqDepartmentId = 9;
  int64 createDate = 10;
  string reqUserTitle = 11;
  int64 serviceReqId = 12;
  double tdlTotalPrice = 13;
  string tdlServiceReqCode = 14;
  int64 tdlIntructionTime = 15;
  int64 tdlIntructionDate = 16;
  int64 tdlIntructionDateMin = 17;
  int64 tdlTreatmentId = 18;
  string tdlTreatmentCode = 19;
  int64 tdlPatientId = 20;
  string tdlPatientCode = 21;
  string tdlPatientName = 22;
  string tdlPatientFirstName = 23;
  string tdlPatientLastName = 24;
  int64 tdlPatientDob = 25;
  int32 tdlPatientIsHasNotDayDob = 26;
  string tdlPatientAddress = 27;
  int64 tdlPatientGenderId = 28;
  string tdlPatientGenderName = 29;
  int64 tdlPatientTypeId = 30;
  string tdlHeinCardNumber = 31;
  string tdlPatientPhone = 32;
  string tdlPatientProvinceCode = 33;
  string tdlPatientDistrictCode = 34;
  string tdlPatientCommuneCode = 35;
  string tdlPatientNationalName = 36;
  int64 virCreateMonth = 37;
  int64 virCreateYear = 38;
  string virHeinCardPrefix = 39;
  string icdCode = 40;
  string icdName = 41;
  string icdSubCode = 42;
  string icdText = 43;
  string expMestTypeCode = 44;
  string expMestTypeName = 45;
  string expMestSttCode = 46;
  string expMestSttName = 47;
  string mediStockCode = 48;
  string mediStockName = 49;
  string reqDepartmentCode = 50;
  string reqDepartmentName = 51;
  string reqRoomCode = 52;
  string reqRoomName = 53;
  string tdlAggrPatientCode = 54;
  string tdlAggrTreatmentCode = 55;
  string expMestSubCode = 56;
  string expMestSubCode2 = 57;
  int64 numOrder = 58;
  int32 priority = 59;
  string groupCode = 60;
  string patientTypeCode = 61;
  string patientTypeName = 62;
  int32 treatmentIsActive = 63;
  string lastExpLoginname = 64;
  string lastExpUsername = 65;
  int64 lastExpTime = 66;
  int64 finishTime = 67;
  int64 finishDate = 68;
  int32 isExportEqualApprove = 69;
  string lastApprovalLoginname = 70;
  string lastApprovalUsername = 71;
  int64 lastApprovalTime = 72;
  int64 lastApprovalDate = 73;
  string workingStateId = 74;
  int64 hisCreateTime = 75;
  int64 hisModifyTime = 76;
  string hisCreator = 77;
  string hisModifier = 78;
  string createdBy = 79;
}

message UpdateExpMestOtherInput {
  string id = 1;
  string expMestCode = 2;
  int64 expMestTypeId = 3;
  int64 expMestSttId = 4;
  int64 mediStockId = 5;
  string reqLoginname = 6;
  string reqUsername = 7;
  int64 reqRoomId = 8;
  int64 reqDepartmentId = 9;
  int64 createDate = 10;
  string reqUserTitle = 11;
  int64 serviceReqId = 12;
  double tdlTotalPrice = 13;
  string tdlServiceReqCode = 14;
  int64 tdlIntructionTime = 15;
  int64 tdlIntructionDate = 16;
  int64 tdlIntructionDateMin = 17;
  int64 tdlTreatmentId = 18;
  string tdlTreatmentCode = 19;
  int64 tdlPatientId = 20;
  string tdlPatientCode = 21;
  string tdlPatientName = 22;
  string tdlPatientFirstName = 23;
  string tdlPatientLastName = 24;
  int64 tdlPatientDob = 25;
  int32 tdlPatientIsHasNotDayDob = 26;
  string tdlPatientAddress = 27;
  int64 tdlPatientGenderId = 28;
  string tdlPatientGenderName = 29;
  int64 tdlPatientTypeId = 30;
  string tdlHeinCardNumber = 31;
  string tdlPatientPhone = 32;
  string tdlPatientProvinceCode = 33;
  string tdlPatientDistrictCode = 34;
  string tdlPatientCommuneCode = 35;
  string tdlPatientNationalName = 36;
  int64 virCreateMonth = 37;
  int64 virCreateYear = 38;
  string virHeinCardPrefix = 39;
  string icdCode = 40;
  string icdName = 41;
  string icdSubCode = 42;
  string icdText = 43;
  string expMestTypeCode = 44;
  string expMestTypeName = 45;
  string expMestSttCode = 46;
  string expMestSttName = 47;
  string mediStockCode = 48;
  string mediStockName = 49;
  string reqDepartmentCode = 50;
  string reqDepartmentName = 51;
  string reqRoomCode = 52;
  string reqRoomName = 53;
  string tdlAggrPatientCode = 54;
  string tdlAggrTreatmentCode = 55;
  string expMestSubCode = 56;
  string expMestSubCode2 = 57;
  int64 numOrder = 58;
  int32 priority = 59;
  string groupCode = 60;
  string patientTypeCode = 61;
  string patientTypeName = 62;
  int32 treatmentIsActive = 63;
  string lastExpLoginname = 64;
  string lastExpUsername = 65;
  int64 lastExpTime = 66;
  int64 finishTime = 67;
  int64 finishDate = 68;
  int32 isExportEqualApprove = 69;
  string lastApprovalLoginname = 70;
  string lastApprovalUsername = 71;
  int64 lastApprovalTime = 72;
  int64 lastApprovalDate = 73;
  string workingStateId = 74;
  int64 hisCreateTime = 75;
  int64 hisModifyTime = 76;
  string hisCreator = 77;
  string hisModifier = 78;
  string updatedBy = 79;
}

message CreateExpMestOtherMedicineInput {
  int64 hisId = 1;
  int64 expMestId = 2;
  string expMestLocalId = 3;
  int64 medicineId = 4;
  int64 tdlMediStockId = 5;
  int64 tdlMedicineTypeId = 6;
  int64 expMestMetyReqId = 7;
  int64 ckImpMestMedicineId = 8;
  int32 isExport = 9;
  double amount = 10;
  double exportAmount = 11;
  string exportByUser = 12;
  int64 exportTime = 13;
  double actualExportAmount = 14;
  string actualExportByUser = 15;
  int64 actualExportTime = 16;
  string approvalLoginname = 17;
  string approvalUsername = 18;
  int64 approvalTime = 19;
  int64 approvalDate = 20;
  string expLoginname = 21;
  string expUsername = 22;
  int64 expTime = 23;
  int64 expDate = 24;
  string expMestCode = 25;
  int64 mediStockId = 26;
  int64 expMestSttId = 27;
  double impPrice = 28;
  double impVatRatio = 29;
  double price = 30;
  double vatRatio = 31;
  double virPrice = 32;
  double taxRatio = 33;
  int64 bidId = 34;
  string packageNumber = 35;
  int64 expiredDate = 36;
  string tdlBidGroupCode = 37;
  string tdlBidPackageCode = 38;
  string bidNumber = 39;
  string bidName = 40;
  int64 medicineTypeId = 41;
  string medicineTypeCode = 42;
  string medicineTypeName = 43;
  int64 impTime = 44;
  int64 supplierId = 45;
  string supplierCode = 46;
  string supplierName = 47;
  string medicineBytNumOrder = 48;
  string medicineRegisterNumber = 49;
  string activeIngrBhytCode = 50;
  string activeIngrBhytName = 51;
  string concentra = 52;
  int32 materialNumOrder = 53;
  int64 serviceId = 54;
  string nationalName = 55;
  int64 manufacturerId = 56;
  string manufacturerCode = 57;
  string manufacturerName = 58;
  string bytNumOrder = 59;
  string registerNumber = 60;
  int64 medicineGroupId = 61;
  string medicineGroupCode = 62;
  string medicineGroupName = 63;
  int32 medicineGroupNumOrder = 64;
  int64 serviceUnitId = 65;
  string serviceUnitCode = 66;
  string serviceUnitName = 67;
  int32 medicineNumOrder = 68;
  int64 medicineUseFormId = 69;
  string medicineUseFormCode = 70;
  string medicineUseFormName = 71;
  int32 medicineUseFormNumOrder = 72;
  double sumInStock = 73;
  double sumByMedicineInStock = 74;
  string mediStockCode = 75;
  string mediStockName = 76;
  int32 numOrder = 77;
  double presAmount = 78;
  int64 patientTypeId = 79;
  string patientTypeCode = 80;
  string patientTypeName = 81;
  int64 tdlPatientId = 82;
  int64 tdlTreatmentId = 83;
  int64 tdlServiceReqId = 84;
  int64 useTimeTo = 85;
  string tutorial = 86;
  int64 tdlIntructionTime = 87;
  int64 tdlIntructionDate = 88;
  string htuText = 89;
  string morning = 90;
  string evening = 91;
  int64 expMestTypeId = 92;
  int64 tdlAggrExpMestId = 93;
  int64 aggrExpMestId = 94;
  int64 reqRoomId = 95;
  int64 reqDepartmentId = 96;
  string reqUserTitle = 97;
  string reqLoginname = 98;
  string reqUsername = 99;
  int64 medicineLineId = 100;
  string createdBy = 101;
}

message UpdateExpMestOtherMedicineExportFieldsByHisIdsInput {
  repeated int64 hisIds = 1;
  int64 exportTime = 2;
  string userId = 3;
}

message UpdateExpMestOtherMedicineActualExportFieldsByHisIdsInput {
  repeated int64 hisIds = 1;
  int64 actualExportTime = 2;
  string userId = 3;
}

message UpdateExpMestOtherMedicineInput {
  string id = 1;
  int64 expMestId = 2;
  string expMestLocalId = 3;
  int64 medicineId = 4;
  int64 tdlMediStockId = 5;
  int64 tdlMedicineTypeId = 6;
  int64 expMestMetyReqId = 7;
  int64 ckImpMestMedicineId = 8;
  int32 isExport = 9;
  double amount = 10;
  double exportAmount = 11;
  string exportByUser = 12;
  int64 exportTime = 13;
  double actualExportAmount = 14;
  string actualExportByUser = 15;
  int64 actualExportTime = 16;
  string approvalLoginname = 17;
  string approvalUsername = 18;
  int64 approvalTime = 19;
  int64 approvalDate = 20;
  string expLoginname = 21;
  string expUsername = 22;
  int64 expTime = 23;
  int64 expDate = 24;
  string expMestCode = 25;
  int64 mediStockId = 26;
  int64 expMestSttId = 27;
  double impPrice = 28;
  double impVatRatio = 29;
  double price = 30;
  double vatRatio = 31;
  double virPrice = 32;
  double taxRatio = 33;
  int64 bidId = 34;
  string packageNumber = 35;
  int64 expiredDate = 36;
  string tdlBidGroupCode = 37;
  string tdlBidPackageCode = 38;
  string bidNumber = 39;
  string bidName = 40;
  int64 medicineTypeId = 41;
  string medicineTypeCode = 42;
  string medicineTypeName = 43;
  int64 impTime = 44;
  int64 supplierId = 45;
  string supplierCode = 46;
  string supplierName = 47;
  string medicineBytNumOrder = 48;
  string medicineRegisterNumber = 49;
  string activeIngrBhytCode = 50;
  string activeIngrBhytName = 51;
  string concentra = 52;
  int32 materialNumOrder = 53;
  int64 serviceId = 54;
  string nationalName = 55;
  int64 manufacturerId = 56;
  string manufacturerCode = 57;
  string manufacturerName = 58;
  string bytNumOrder = 59;
  string registerNumber = 60;
  int64 medicineGroupId = 61;
  string medicineGroupCode = 62;
  string medicineGroupName = 63;
  int32 medicineGroupNumOrder = 64;
  int64 serviceUnitId = 65;
  string serviceUnitCode = 66;
  string serviceUnitName = 67;
  int32 medicineNumOrder = 68;
  int64 medicineUseFormId = 69;
  string medicineUseFormCode = 70;
  string medicineUseFormName = 71;
  int32 medicineUseFormNumOrder = 72;
  double sumInStock = 73;
  double sumByMedicineInStock = 74;
  string mediStockCode = 75;
  string mediStockName = 76;
  int32 numOrder = 77;
  double presAmount = 78;
  int64 patientTypeId = 79;
  string patientTypeCode = 80;
  string patientTypeName = 81;
  int64 tdlPatientId = 82;
  int64 tdlTreatmentId = 83;
  int64 tdlServiceReqId = 84;
  int64 useTimeTo = 85;
  string tutorial = 86;
  int64 tdlIntructionTime = 87;
  int64 tdlIntructionDate = 88;
  string htuText = 89;
  string morning = 90;
  string evening = 91;
  int64 expMestTypeId = 92;
  int64 tdlAggrExpMestId = 93;
  int64 aggrExpMestId = 94;
  int64 reqRoomId = 95;
  int64 reqDepartmentId = 96;
  string reqUserTitle = 97;
  string reqLoginname = 98;
  string reqUsername = 99;
  int64 medicineLineId = 100;
  string updatedBy = 101;
}
